<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/main_container_child"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/txt_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/yellow400"
            android:contentDescription="@string/camera"
            android:gravity="center"
            android:text="@string/camera"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/redA200"
            android:contentDescription="@string/map"
            android:gravity="center"
            android:text="@string/map"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/lightblueA700"
            android:contentDescription="@string/history"
            android:gravity="center"
            android:text="@string/history"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/greenA200"
            android:contentDescription="@string/info"
            android:gravity="center"
            android:text="@string/info"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>